--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "html-pdf": "^3.0.1",
     "jest": "^29.5.0",
     "nodemon": "^2.0.21",
     "passport": "^0.6.0",
